--- a/SComputers/env.html
+++ b/SComputers/env.html
@@ -349,6 +349,7 @@ end</code>
         <br/><p class="text">setAlwaysOn(state:boolean) - sets the always on flag, after installing it, the computer will work without giving a logical signal</p>
         <br/><p class="text">getAlwaysOn():boolean - returns the status of the always on flag</p>
 
+        <a name="callbacks_and_flags"></a>
         <br/>
         <br/>
         <h1>flags</h1>
