--- a/SComputers/image.html
+++ b/SComputers/image.html
@@ -40,6 +40,7 @@
             <li><span>scimg:drawForTicks(display, ticks, posX, posY):function - draws the image on the display at the specified point starting from the upper left corner. stretches the rendering process by the specified number of ticks. returns a callback function that you should call until it returns true</span></li>
             <li><span>scimg:set(x, y, color) - sets the pixel to the specified image position</span></li>
             <li><span>scimg:get(x, y):color - returns the color from the specified location of the image</span></li>
+            <li><span>scimg:rawGet(x, y):color - returns the color as it is stored in the image buffer. it can be a number, a string, smcolor, or even nil</span></li>
             <li><span>scimg:encode():string - converts an image as scimg format</span></li>
             <li><span>scimg:encode8():string - converts an image as scimg8 format</span></li>
             <li><span>scimg:save(disk, path) - saves the image as a scimg</span></li>
