--- a/SComputers/ramfs.html
+++ b/SComputers/ramfs.html
@@ -18,6 +18,7 @@
             this can be useful in some, albeit rare cases<br/>
             the API of the file system created in this way is identical to the API of the <a href="disk.html" class="hyper">disk</a><br/>
             this library also allows you to convert a file system to a string, for example, to write it to another medium (for example, a cardboard punched card)<br/>
+            you can use the <a class="hyper" href="./vfs.html">vfs</a> library to mount multiple filesystems into a single virtual filesystem
         </p>
 
         <p class="text">methods:</p>
