--- a/SComputers/safeSmEnv.html
+++ b/SComputers/safeSmEnv.html
@@ -54,7 +54,8 @@
         <p class="text">
             sm.<a href="https://scrapmechanic.com/api/namespace_Game_sm_json.html" class="hyper">json</a> - <pre><code class="language-lua" style="width: fit-content;">{
     writeJsonString = sm.json.writeJsonString,
-    parseJsonString = sm.json.parseJsonString
+    parseJsonString = sm.json.parseJsonString,
+    open = sm.json.open --only if the "safe (with sm.json.open)" mode is enabled
 }</code>
 </pre>
         </p>
