--- a/SComputers/vdisplay.html
+++ b/SComputers/vdisplay.html
@@ -22,7 +22,7 @@
 
         <p class="text">methods:</p>
         <ul class="list">
-            <li><span>vdisplay.create(callbacks, width, height):vdisplayObject - creates a virtual display</span></li>
+            <li><span>vdisplay.create(callbacks, width, height, supportGlassMaterial:boolean, glassMaterialByDefault:boolean, setResolutionSettings:boolean):vdisplayObject - creates a virtual display</span></li>
             <li><span>vdisplay.touchscreen(vdisplayObject):function(x:number, y:number, state:string, button:number, nickname:string) - adds a virtual touchscreen for a virtual display</span></li>
             <li><span>vdisplay.bundle(displays:table, numberDisplaysByWidth:number):vdisplayObject - combines many displays of the same resolution into one large display. It combines all the functions of displays, including the touchscreen. pass the table with the displays from the upper-left edge to the lower-right edge from top to bottom and the number of displays by width</span></li>
         </ul>
