--- a/SComputers/components.html
+++ b/SComputers/components.html
@@ -34,6 +34,7 @@
             <a class="hyper" href="./pistonController.html"><li><span>pistonController</span></li></a>
             <a class="hyper" href="./rom.html"><li><span>rom disk</span></li></a>
             <a class="hyper" href="./chaff.html"><li><span>chaff (dipole reflector)</span></li></a>
+            <a class="hyper" href="./cameraControl.html"><li><span>cameraControl</span></li></a>
         </ul>
     
         <script src="main.js"></script>
