--- a/SComputers/disk.html
+++ b/SComputers/disk.html
@@ -21,6 +21,7 @@
             there is a computer with a built-in disk. its embedded disk is always identified under the first ID in the disk component table. the connected external drive will already be the second one<br/>
             please note that this filesystem allows a folder and a file with the same name to exist<br/>
             if you need to transfer a large amount of data along with your creation to the steam workshop, you can use a <a href="rom.html" class="hyper">"ROM disk"</a><br/>
+            you can use the <a class="hyper" href="./vfs.html">vfs</a> library to mount multiple disks into a single virtual filesystem<br/>
             component name - disk
         </p>
 
@@ -29,7 +30,7 @@
             <li><span>disk.clear() - clears the disk</span></li>
             <li><span>disk.getUsedSize():number - reads how much space is used on the disk in bytes</span></li>
             <li><span>disk.getMaxSize():number - returns the maximum amount of data that can be written to disk in bytes</span></li>
-            <li><span>disk.isReadOnly():boolean - returns whether the file system is read-only. it is always false at the moment if we are talking about a regular disk</span></li>
+            <li><span>disk.isReadOnly():boolean - returns whether the filesystem is read-only. it is always false at the moment if we are talking about a general disk</span></li>
             <br/>
             <li><span>disk.getData():string - reads a line from a .fastsave file, if there is no such file yet, returns an empty line</span></li>
             <li><span>disk.setData(string) - saves a string to a .fastsave file</span></li>
