--- a/SComputers/libraries.html
+++ b/SComputers/libraries.html
@@ -24,15 +24,17 @@
             <a class="hyper" href="./json.html"><li><span>json</span></li></a>
             <a class="hyper" href="./midi.html"><li><span>midi</span></li></a>
             <a class="hyper" href="./nbs.html"><li><span>nbs</span></li></a>
-            <a class="hyper" href="./objs.html"><li><span>objs</span></li></a>
-            <a class="hyper" href="./ramfs.html"><li><span>ramfs</span></li></a>
-            <a class="hyper" href="./styles.html"><li><span>styles</span></li></a>
+            <a class="hyper" href="./objs.html"><li><span>objs (additional objects for the gui library)</span></li></a>
+            <a class="hyper" href="./ramfs.html"><li><span>ramfs (creating a filesystem in RAM with support for serialization to a string)</span></li></a>
+            <a class="hyper" href="./styles.html"><li><span>styles (additional styles for the gui library)</span></li></a>
             <a class="hyper" href="./timer.html"><li><span>timer</span></li></a>
             <a class="hyper" href="./utils.html"><li><span>utils</span></li></a>
-            <a class="hyper" href="./vdisplay.html"><li><span>vdisplay</span></li></a>
+            <a class="hyper" href="./vdisplay.html"><li><span>vdisplay (creating a virtual display, which allows redirecting the render to other sources)</span></li></a>
             <a class="hyper" href="./syntax.html"><li><span>syntax</span></li></a>
             <a class="hyper" href="./xEngine.html"><li><span>xEngine (physical 3D engine)</span></li></a>
-            <a class="hyper" href="./enlua.html"><li><span>enlua (encryption and execution of encrypted code) (NEW!)</span></li></a>
+            <a class="hyper" href="./enlua.html"><li><span>enlua (encryption and execution of encrypted code)</span></li></a>
+            <a class="hyper" href="./process.html"><li><span>process (creating a SComputers VM) (NEW!)</span></li></a>
+            <a class="hyper" href="./vfs.html"><li><span>vfs (a virtual filesystem with support for mounting and recursive operations) (NEW!)</span></li></a>
         </ul>
     
         <script src="main.js"></script>
