--- a/SComputers/objs.html
+++ b/SComputers/objs.html
@@ -14,55 +14,60 @@
     <body>
         <p class="text">
             usage: require("objs")<br/>
-            contains an additional set of elements for the <a href="gui.html" class="hyper">gui library</a><br/>
-            you can add them to a scene or window using sceneOrWindow:createCustom(x, y, sizeX, sizeY, class, ...):gobj<br/>
-            the arguments of the elements are passed after the class to the createCustom method<br/>
+            contains an additional set of objects for the <a href="gui.html" class="hyper">gui library</a><br/>
+            you can add them to a scene or window using sceneOrWindow:createCustom(x, y, sizeX, sizeY, class, ...):guiobject<br/>
+            the arguments of the objects are passed after the class to the createCustom method
         </p>
 
         <p class="text">elements:</p>
         <ul class="list">
-            <li><span>objs.panel - just fills the rectangle with a certain color, pass the color as the first argument (it is often better to use a window for these purposes, but the panel option can also be used)</span></li>
-            <li><span>objs.camera - allows you to display the contents of the camera in the GUI</span></li>
+            <li><span>objs.camera(camera, func, ...) - allows you to display the contents of the camera in the GUI</span></li>
+            <li><span>objs.bufferedCamera(camera, func, ...) - allows you to display the contents of the camera in the GUI. works via with a frame buffer</span></li>
         </ul>
 
         <pre>
-            <code class="language-lua" style="width: fit-content;">--example for display 64x64
+            <code class="language-lua" style="width: fit-content;">--the example was created for a 128x128 screen
+local objs = require("objs")
 
-local display = getComponent("display")
-
-local width, height = display.getSize()
+local display = getComponents("display")[1]
 display.reset()
 display.clearClicks()
 display.setClicksAllowed(true)
-display.clear()
-display.flush()
+local rx, ry = display.getWidth(), display.getHeight()
+
+local cameras = getComponents("camera")
 
 local gui = require("gui").new(display)
-local objs = require("objs")
 local styles = require("styles")
-local scene = gui:createScene(0x444444)
+local scene = gui:createScene("777777")
+scene:setDefaultOffset(0)
 
-local function createSwitch(parentObject)
-    local offsetX = 3
-    local offsetY = 3
-    local switchWidth = parentObject.sizeX - 6
-    for i = 1, 5 do
-        local switch = scene:createButton(nil, nil, switchWidth, 8, true, nil, "444444", "ffffff", "44b300", "ffffff")
-        switch:setCustomStyle(styles.switch)
-        switch:setOffsetPosition(parentObject, offsetX, offsetY)
-        parentObject = switch
-        offsetX = 0
-        offsetY = 10
+local function addWindow(index, posX, posY)
+    local window = scene:createWindow(nil, nil, nil, nil, "2d2d2d")
+    window:upPanel("058db8", "ffffff", "camera", true)
+    window:setDraggable(true)
+    window:setSize(rx / 2, ry / 2)
+    window:setPosition(posX * (rx / 2), posY * (ry / 2))
+
+    local closeButton = window:panelButton(7, false, "X", "00a2d5", "0054a1", "00c2ff", "0085ff")
+    closeButton:attachCallback(function(self, state, inZone)
+        if not state and inZone then
+            window:destroy()
+        end
+    end)
+
+    local cameraViewer = window:createCustom(nil, nil, nil, nil, objs.bufferedCamera, cameras[(index % #cameras) + 1].fork(), "drawAdvanced", true)
+    cameraViewer:setFov(math.rad(90))
+    cameraViewer:setDisabled(true)
+
+    function cameraViewer:onTick()
+        cameraViewer:update()
     end
 end
 
-local panel1 = scene:createCustom(2, 2, (width / 2) - 3, height - 4, objs.panel, 0xff0000)
-createSwitch(panel1)
-
-local panel2 = scene:createCustom((width / 2) + 1, 2, (width / 2) - 3, height - 4, objs.panel, 0xff00ff)
-createSwitch(panel2)
-
-scene:select()
+for i = 0, 3 do
+    addWindow(i, i % 2, math.floor(i / 2))
+end
 
 function callback_loop()
     if _endtick then
@@ -72,62 +77,6 @@ function callback_loop()
     end
 
     gui:tick()
-
-    if gui:needFlush() then
-        gui:draw()
-        display.flush()
-    end
-end</code>
-        </pre>
-
-        <pre>
-            <code class="language-lua" style="width: fit-content;">--example for display 128x128
-
-local display = getComponent("display")
-
-local width, height = display.getSize()
-display.reset()
-display.clearClicks()
-display.setClicksAllowed(true)
-display.clear()
-display.flush()
-
-local gui = require("gui").new(display)
-local objs = require("objs")
-local styles = require("styles")
-local scene = gui:createScene(0x444444)
-
-local function createSwitch(parentObject)
-    local offsetX = 3
-    local offsetY = 3
-    local switchWidth = parentObject.sizeX - 6
-    for i = 1, 5 do
-        local switch = scene:createButton(nil, nil, switchWidth, 8, true, nil, "444444", "ffffff", "44b300", "ffffff")
-        switch:setCustomStyle(styles.switch)
-        switch:setOffsetPosition(parentObject, offsetX, offsetY)
-        parentObject = switch
-        offsetX = 0
-        offsetY = 10
-    end
-end
-
-local panel1 = scene:createCustom(2, 2, (width / 2) - 3, height - 4, objs.panel, 0xff0000)
-createSwitch(panel1)
-
-local panel2 = scene:createCustom((width / 2) + 1, 2, (width / 2) - 3, height - 4, objs.panel, 0xff00ff)
-createSwitch(panel2)
-
-scene:select()
-
-function callback_loop()
-    if _endtick then
-        display.clear()
-        display.flush()
-        return
-    end
-
-    gui:tick()
-
     if gui:needFlush() then
         gui:draw()
         display.flush()
