upload first version scmframework

--- a/SComputers/api.html
+++ b/SComputers/api.html
@@ -46,8 +46,8 @@
             <a class="hyper" href="./components.html"><li><span>components</span></li></a>
             <a class="hyper" href="./making_addons.html"><li><span>making addons</span></li></a>
             <a class="hyper" href="./lag_policy.html"><li><span>lag policy</span></li></a>
-            <!--<a class="hyper" href="./scriptableOS.html"><li><span>scriptableOS</span></li></a>
-            <a class="hyper" href="./scmframework.html"><li><span>scmframework (a framework for creating mods based on SComputers)</span></li></a>-->
+            <!--<a class="hyper" href="./scriptableOS.html"><li><span>scriptableOS</span></li></a>-->
+            <a class="hyper" href="./scmframework.html"><li><span>scmframework (a framework for creating mods based on SComputers)</span></li></a>
         </ul>
 
         <br/>
