--- a/SComputers/index.html
+++ b/SComputers/index.html
@@ -15,14 +15,15 @@
 
             </br>
             <button class="cool-button green" onclick="window.open('https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596', '_blank').focus();">download mod from steam</button>
-            <button class="cool-button brown" onclick="window.open('https://drive.google.com/file/d/1NwXmVOJmJE_GiYR-BCKKx_zfCOz0UBQO/view?usp=drive_link', '_blank').focus();">download mod from google drive (version: 5.2)</button>
+            <button class="cool-button brown" onclick="window.open('https://drive.google.com/file/d/11VVqinQiF5fHHOTCC9qOoIL2sU_MefA3/view?usp=sharing', '_blank').focus();">download mod from google drive (version: 5.3)</button>
             <button class="cool-button red" onclick="window.location.href = './api.html'">api reference</button>
             <button class="cool-button blue" onclick="window.location.href = './addons.html'">addon list</button>
             <button class="cool-button yellow" onclick="window.location.href = './contact_me.html'">contact me</button>
             </br>
             <button class="cool-button purple" id="installButton" style="display: none;">install SComputers application</button>
             <button class="cool-button gray" id="theme-toggle">change theme</button>
-
+            <button class="cool-button blue" onclick="window.location.href = './scmframework.html'">scmframework</button>
+            
             </br>
             <div class="cool-text">
                 <div class="text">
