--- a/SComputers/scmframework.html
+++ b/SComputers/scmframework.html
@@ -1,12 +1,192 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="refresh" content="0; url=indev.html">
-        <title>Redirecting...</title>
+        <title>SComputers - Api Reference</title>
+        <link rel="icon" href="favicon.ico">
+        <link rel="stylesheet" href="style.css">
+        <link href="highlight.css" rel="stylesheet">
+        <script src="highlight.js"></script>
+        <script>
+            hljs.highlightAll();
+        </script>
     </head>
     <body>
-        <div>Redirecting <a href="indev.html">indev.html</a>...</div>
+        <center>
+            <div class="cool-frame">
+                <center>
+                    <h1>scmframework</h1>
+                    <h2>SComputers Mod Framework</h2>
+                    <button class="cool-button red" onclick="downloadFile('https://igorkll.github.io/SComputers/scmframework/scmframework.lua', 'scmframework.lua');">download scmframework (1.0)</button>
+                    <button class="cool-button yellow" onclick="downloadFile('https://igorkll.github.io/SComputers/scmframework/build_scmframework.lua', 'build_scmframework.lua');">download scmframework build script (1.0)</button>
+                    <br/>
+                    <button class="cool-button blue" onclick="downloadFile('https://igorkll.github.io/SComputers/scmframework/scmframework_additional_files.zip', 'scmframework_additional_files.zip');">download scmframework additional files (1.0)</button>
+                    <button class="cool-button blue" onclick="downloadFile('https://igorkll.github.io/SComputers/scmframework/scomputers_displays_models.zip', 'scomputers_displays_models.zip');">download SComputers display models</button>
+                </center>
+            </div>
+
+            <br/>
+            <p class="cool-text">
+                scmframework is a framework that allows you to make your mods based on SComputers and with SComputers functionality!<br/>
+                something like busybox for Scrap Mechanic<br/>
+                the framework is compiled using a special script from the SComputers scripts folder. the output is a single file<br/>
+                the scmframework build script comes with the mod and you can find it in the directory: USER/documentation/scmframework<br/>
+                the build script is designed for the windows operating system and runs through luajit<br/>
+                as the first argument, the script takes the path to the SComputers Scripts folder<br/>
+                the scmframework is a single file, your shape script can be either separate or inserted at the end of this file<br/>
+                the scmframework contains almost all SComputers, but without 3D models and textures<br/>
+                it also does not contain fonts converted from windows fonts, as they weighed too much<br/>
+                please note that although the framework itself is single-file, in order to use such things as displays, holographic projectors, GUIs, and standard samples in the synthesizer, you need to download additional files for scmframework<br/>
+                if you want to use a touchscreen, then most likely you will have to use the original display models from SComputers, you can download them and embed them in your mod<br/>
+                if you use scmframework in your mod, then leave a message about it in the description with a link to this page
+            </p>
+
+            <br/>
+            <div class="cool-text">
+                <center>
+                    <h2>scmframework api</h2>
+                </center>
+                <ul class="list">
+                    <li><span>scmframework.scomputers - <a class="hyper" href="./making_addons.html">SComputers API</a> for creating addons, it is not available here through sm.scomputers</span></li>
+                    <li><span>scmframework.dofile(path) - the dofile of the scmframework. It can load not only real files, but also files packaged inside the framework</span></li>
+                    <li><span>scmframework.scmframeworkClass - the class that you need to inherit from in order to add virtual shapes from SComputers to your shape</span></li>
+                    <li><span>scmframework.defaultSettings - standard mod settings</span></li>
+                    <li><span>scmframework.unrestrictedSettings - mod settings that disable lag protection, motors resource consumption, and component connectivity checks during operation. recommended when using the framework. does not activate unsafe mode by itself by default</span></li>
+                    <li><span>scmframework.setSComputersSettings(settings) - changes SComputers settings. you can use the standard preset or create your own custom settings table</span></li>
+                </ul>
+            </div>
+
+            <br/>
+            <div class="cool-text">
+                <center>
+                    <h2>scmframeworkClass callbacks</h2>
+                </center>
+                <ul class="list">
+                    <li><span>scmframeworkClass.scmframework_init - it is called on the server and on the client when creating the block. from here, you need to set the configuration, create the necessary virtual blocks and the connections between them.</span></li>
+                </ul>
+            </div>
+
+            <br/>
+            <div class="cool-text">
+                <center>
+                    <h2>scmframeworkClass methods</h2>
+                </center>
+                <ul class="list">
+                    <li><span>scmframeworkClass:addVirtualShape(class, scriptedData:table|nil, defaultStorage:table|nil):virtualShape - creates a virtual shape</span></li>
+                    <li><span>scmframeworkClass:addVirtualComputer(defaultScript:string|nil, defaultData:string|nil, alwaysOn:boolean|nil, unsafe:boolean|nil, localEnvHook:function(self, env)):virtualShape - creates a virtual computer. you can specify the default script and the default state of the data section (accessed via setData/getData) as a string (not a path)<br/>
+                    you can also create unsafe computer, it will always be able to write to the chat and will always work in unsafe mode with full access. anti-lag will not be applied to it, and the CPU time limit will be at least 40 ticks, regardless of the SComputers configuration<br/>
+                    you can pass a function to create an ENV hook. please note that in this case your ENV hook can also be called on the client when using clientInvoke in unsafe mode
+                    </span></li>
+                    <li><span>scmframeworkClass:addVirtualDisplay(width:number, height:number, sizeX:number, sizeY:number, zpos:number|nil (default: 0)):virtualShape - creates a virtual display shape</span></li>
+                    <li><span>scmframeworkClass:addVirtualClassicDisplay(width:number, height:number):virtualShape - creates a virtual display shape. made specifically for use with a 3D model of the display from SComputers itself and therefore does not require specifying the size. allows you to use the touchscreen when using the SComputers model. When using, make sure that the aspect ratio of the resolution corresponds to the actual aspect ratio of the 3D model used</span></li>
+                    <li><span>scmframeworkClass:addVirtualSynthesizer():virtualShape - creates a virtual synthesizer shape</span></li>
+                    <li><span>scmframeworkClass:addVirtualGps():virtualShape - creates a virtual gps shape</span></li>
+                </ul>
+            </div>
+
+            <br/>
+            <div class="cool-text">
+                <center>
+                    <h2>virtualShape methods</h2>
+                </center>
+                <ul class="list">
+                    <li><span>virtualShape:interact(character, state) - simulates pressing the E button on shape</span></li>
+                    <li><span>virtualShape:tinker(character, state) - simulates pressing the U button on shape</span></li>
+                    <li><span>virtualShape:canInteract(character):boolean - returns true if shape can handle the E button at the moment</span></li>
+                    <li><span>virtualShape:canTinker(character):boolean - returns true if shape can handle the U button at the moment</span></li>
+                    <li><span>virtualShape:createVirtualLink(child) - makes a virtual connection within one shape between two virtual shapes. although in most cases the direction of virtual communication does not matter, it is better to do it in the direction of how the components connect to real SComputers, otherwise not all components may work correctly</span></li>
+                    <li><span>virtualShape:setOpenedOutput(boolean) - makes the output "open" and allows the virtual shape to interact with the real shapes (default: false)</span></li>
+                    <li><span>virtualShape:setOpenedInput(boolean) - makes the input "open" and allows the virtual shape to interact with the real shapes (default: false)</span></li>
+                </ul>
+            </div>
+
+            <br/>
+            <div class="cool-text">
+                <center>
+                    <h2>virtual computer methods</h2>
+                </center>
+                <ul class="list">
+                    <li><span>virtualShape:getEnv():table - returns the ENV table. use this to read the table only, use localEnvHook for writing, as the table can be recreated at any time (for example, during reboot)</span></li>
+                    <li><span>virtualShape:reboot() - reboot the computer</span></li>
+                    <li><span>virtualShape:setActive(boolean) - activates the computer. Instead, the computer can be activated using the always on flag at creation or by using a real logic signal from outside if its input is open using setOpenedInput</span></li>
+                    <li><span>virtualShape:isActive():boolean - returns true if the computer is currently running</span></li>
+                </ul>
+            </div>
+        
+            <br/>
+            <pre>
+                <code class="language-lua" style="text-align: left; width: fit-content;">dofile("$CONTENT_DATA/Scripts/scmframework.lua")
+scmtest = class(scmframework.scmframeworkClass)
+
+function scmtest:scmframework_init()
+    --although the code is declared as constant here, it is not constant and can be changed via "setCode" inside the program. just like it happens in regular SComputers
+    self.computer = self:addVirtualComputer([[local colors = require("colors")
+local display = getComponent("display")
+local synthesizer = getComponent("synthesizer")
+
+function onStart()
+    synthesizer.stopLoops()
+    synthesizer.startLoop(1, "chapter2_alarm", {alarm = 2})
+end
+
+function onTick()
+    local width = display.getWidth()
+    local height = display.getHeight()
+
+    for x = 0, width - 1 do
+        display.fillRect(x, 0, 1, height, colors.combineColorToNumber(x / (width - 1), colors.pack(colors.hsvToRgb256(255 - (getUptime() % 256), 255, 255)), colors.pack(colors.hsvToRgb256(getUptime() % 256, 255, 255))))
+    end
+
+    display.flush()
+end
+
+function onStop()
+    display.clear()
+    display.flush()
+
+    synthesizer.stopLoops()
+end
+
+_enableCallbacks = true]], nil, true)
+
+    self.display = self:addVirtualDisplay(128, 64, 1, 1.2)
+    self.computer:createVirtualLink(self.display)
+
+    self.synthesizer = self:addVirtualSynthesizer()
+    self.computer:createVirtualLink(self.synthesizer)
+end
+
+--[[
+--you can allow the user to open the computer code if you uncomment this:
+function scmtest:client_onInteract(character, state)
+    self.computer:interact(character, state)
+end
+]]</code>
+            </pre>
+        </center>
+
+
+        <script>
+            async function downloadFile(fileURL, fileName) {
+                try {
+                    const response = await fetch(fileURL);
+                    if (!response.ok) {
+                        throw new Error('Network error: Unable to download the file.');
+                    }
+                    const blob = await response.blob();
+                    const link = document.createElement('a');
+                    link.href = URL.createObjectURL(blob);
+                    link.download = fileName;
+                    document.body.appendChild(link);
+                    link.click();
+                    document.body.removeChild(link);
+                    URL.revokeObjectURL(link.href);
+                } catch (error) {
+                    console.error('Error downloading file:', error);
+                }
+            }
+        </script>
+    
+        <script src="main.js"></script>
     </body>
 </html>
