--- a/logichub/index.html
+++ b/logichub/index.html
@@ -18,6 +18,7 @@
                 <div class="image-button" onclick="window.open('https://discord.gg/uJrsmUjaMG', '_blank');"><img src="icons/discord_server.png"/></div>
                 <div class="image-button" onclick="window.open('https://steamcommunity.com/profiles/76561198977226540/', '_blank');"><img src="icons/steam.png"/></div>
                 <div class="image-button" onclick="window.open('http://github.com/igorkll', '_blank');"><img src="icons/github.png"/></div>
+                <div class="image-button" onclick="window.open('https://boosty.to/bananapen', '_blank');"><img src="icons/boosty.png"/></div>
             </div>
         </div>
 
