--- a/betterAPI/index.html
+++ b/betterAPI/index.html
@@ -24,6 +24,7 @@
                 <div class="image-button" onclick="window.open('https://steamcommunity.com/profiles/76561198977226540/', '_blank');"><img src="icons/steam.png"/></div>
                 <div class="image-button" onclick="window.open('http://github.com/igorkll', '_blank');"><img src="icons/github.png"/></div>
                 <div class="image-button" onclick="window.open('https://boosty.to/bananapen', '_blank');"><img src="icons/boosty.png"/></div>
+                <div class="image-button" onclick="window.open('https://igorkll.github.io/logichub', '_blank');"><img src="icons/logichub.png"/></div>
             </div>
         </div>
 
